tests/baselines/reference/contextualSignatureWithExtraParameters.errors.txt
error TS2318: Cannot find global type 'AsyncIterableIterator'.
error TS2318: Cannot find global type 'IterableIterator'.
contextualSignatureWithExtraParameters.ts(64,49): error TS2552: Cannot find name 'Generator'. Did you mean 'Enumerator'?
contextualSignatureWithExtraParameters.ts(70,49): error TS2583: Cannot find name 'AsyncGenerator'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2018' or later.


!!! error TS2318: Cannot find global type 'AsyncIterableIterator'.
!!! error TS2318: Cannot find global type 'IterableIterator'.
==== contextualSignatureWithExtraParameters.ts (2 errors) ====
    // https://github.com/microsoft/TypeScript/issues/59309
    function f1(
        cb: ((item: number) => void) | ((item: number, extra: string) => void),
      ) {}
      
    f1((item) => {});
    
    function f2<T>(
        arr: T[],
        cb: ((item: T) => void) | ((item: T, extra: unknown) => void),
      ) {}
      
    f2([1, 2, 3], (item) => {});
    
    export interface AsyncResultCallback<T, E = Error> {
        (err?: E | null, result?: T): void;
    }
    
    export interface AsyncResultIterator<T, R, E = Error> {
        (item: T, callback: AsyncResultCallback<R, E>): void;
    }
    export interface AsyncResultIteratorPromise<T, R> {
        (item: T): Promise<R>;
    }
    
    declare function mapLimit<T, R, E = Error>(
        arr: T[],
        limit: number,
        iterator:  AsyncResultIteratorPromise<T, R> | AsyncResultIterator<T, R, E>,
    ): Promise<R[]>;
    
    mapLimit([1,2,3], 3, async (n) => {
        return n ** 2;
    });
    
    function f3(
        cb: ((a: string, b?: string) => void) | ((a: string, ...rest: string[]) => void)
      ) {}
      
    f3((a) => {});
    f3((a, b) => {});
    
    function f4(
        cb: ((a: string, b: string) => void) | ((a: string, ...rest: string[]) => void)
      ) {}
      
    f4((a) => {});
    f4((a, b) => {});
    
    function f5(
        cb: ((a: string, b: string) => void) | ((...rest: string[]) => void)
      ) {}
      
    f5((a) => {});
    f5((a, b) => {});
    
    function f6(
      cb: ((a: string) => string) | ((a: number) => Promise<number>)
    ) {}
    
    f6(async (a) => {return 0});
    
    function f7(
      cb: ((a: string) => string) | ((a: number) => Generator<number, void, unknown>)
                                                    ~~~~~~~~~
!!! error TS2552: Cannot find name 'Generator'. Did you mean 'Enumerator'?
!!! related TS2728 lib.scripthost.d.ts:--:--: 'Enumerator' is declared here.
    ) {}
    
    f7(function* generator(a) {yield 0});
    
    function f8(
      cb: ((a: string) => string) | ((a: number) => AsyncGenerator<number, void, unknown>)
                                                    ~~~~~~~~~~~~~~
!!! error TS2583: Cannot find name 'AsyncGenerator'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2018' or later.
    ) {}
    
    f8(async function* generator(a) {yield 0});
    
    